# clean-architecture-python-boilerplate

./: .editorconfig  .gitignore  README.md  pyproject.toml  setup_logging.py
decorators/: __init__.py  exception.py  timeit.py
migrations/: env.py  script.py.mako
models/: __init__.py  base.py
repositories/: __init__.py  base.py
services/: __init__.py  database.py
settings/: __init__.py  database.py  mariadb.py  postgres.py  rabbitmq.py  redis.py  telegram.py
src/connectors/: __init__.py  database.py
src/decorators/: __init__.py  exception.py  timeit.py
src/migrations/: env.py  script.py.mako
src/models/: __init__.py  base.py
src/repositories/: __init__.py
src/services/: __init__.py  database.py
src/settings/: __init__.py  mariadb.py  postgres.py  rabbitmq.py  redis.py  telegram.py
src/templates/: __init__.py
templates/: __init__.py
