[project]
name = "clean-architecture-boilerplate"
version = "0.1.0"
description = "Just a simple boilerplate to create a new project"
authors = [
    {name = "Khiem Doan", email = "doankhiem.crazy@gmail.com"},
]

readme = "README.md"
license = {text = "GPL-3"}

requires-python = ">=3.11"

dependencies = [
    "loguru==0.7.3",
    "fast-depends==2.4.12",
    "pydantic==2.10.5",
    "pydantic-settings==2.7.1",
    "psycopg[binary,pool]==3.2.3",
    "SQLAlchemy[asyncio]==2.0.37",
    "alembic==1.14.0",
    "advanced-alchemy==0.28.0",
    "Jinja2==3.1.5",
    "valkey[libvalkey]==6.0.2",
    "aio-pika==9.5.4",
    "celery==5.4.0",
    "httpx[http2]==0.28.1",
    "tenacity==8.5.0",
    "APScheduler==4.0.0a5",
]

[dependency-groups]
tools = [
]
testing = [
    "pytest",
    "pytest-asyncio",
    "icecream",
    "reloadium",
]
linting = [
    "isort",
    "ruff",
]

[tool.isort]
line_length = 120

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
