[project]
name = "clean-architecture-boilerplate"
version = "0.1.0"
description = "Just a simple boilerplate to create a new project"
authors = [
    {name = "Khiem Doan", email = "doankhiem.crazy@gmail.com"},
]

readme = "README.md"
license = {text = "GPL-3"}

requires-python = ">=3.13"

dependencies = [
    "tzdata==2025.2",
    "loguru==0.7.3",
    "fast-depends==3.0.3",
    "pydantic==2.12.4",
    "pydantic-settings==2.12.0",
    "psycopg[binary,pool]==3.2.12",
    "SQLAlchemy[asyncio]==2.0.44",
    "alembic==1.17.2",
    "advanced-alchemy==1.8.0",
    "Jinja2==3.1.6",
    "valkey[libvalkey]==6.1.1",
    "aio-pika==9.5.8",
    "celery==5.5.3",
    "httpx[http2]==0.28.1",
    "tenacity==9.1.2",
    "APScheduler==4.0.0a6",
]

[dependency-groups]
tools = [
]
testing = [
    "pytest",
    "pytest-asyncio",
    "icecream",
    "reloadium",
]
linting = [
    "isort",
    "ruff",
]

[tool.isort]
line_length = 120

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
